2019xcor work in progress

--- a/2019xcor/dsp.tex
+++ b/2019xcor/dsp.tex
@@ -33,50 +33,50 @@
 %======================================
 \subsection{Convolution operator}
 %======================================
-\ifdochasnot{seq}{
-%--------------------------------------
-\begin{definition}
-\label{def:sequence}
-\label{def:seq}
-\footnote{
-  \citerp{bromwich1908}{1},
-  \citerpgc{thomson2008}{23}{143484367X}{Definition 2.1},
-  \citerpg{joshi1997}{31}{8122408265}
-  }
-\label{def:tuple}
-%--------------------------------------
-Let $\clFyx$ be the set of all functions from a set $\setY$ to a set $\setX$.
-Let $\Z$ be the set of integers.
-\defbox{\begin{array}{l}
-  \text{A function $\ff$ in $\clFyx$ is a \hid{sequence} over $\setX$ if $\setY=\Z$.}\\
-  \text{A sequence may be denoted in the form $\ds\seqxZ{x_n}$ or simply as $\ds\seqn{x_n}$.}\\
-  %\text{A function $\ff$ in $\clFyx$ is an \hid{n-tuple} over $\setX$ if $\setY=\setn{1,2,\ldots,\xN}$.}\\
-  %\text{An n-tuple may be denoted in the form $\ds\tuplexn{x_n}$ or simply as $\ds\tuplen{x_n}$.}
-\end{array}}
-\end{definition}
-  }
-
-%--------------------------------------
-\begin{definition}
-\footnote{
-  \citerpgc{kubrusly2011}{347}{0817649972}{Example 5.K}
-  }
-\label{def:spllR}
-\label{def:spllF}
-%--------------------------------------
-Let $\fieldF$ be a \structe{field} \xref{def:field}.
-\defboxt{
-  The \structd{space of all absolutely square summable sequences} $\spllF$ over $\F$ is defined as
-  \\\indentx$\ds\spllF\eqd\set{\seqxZ{x_n}}{\sum_{n\in\Z}\abs{x_n}^2 < \infty}$
-  }
-\end{definition}
-
-The space $\spllR$ is an example of a \structe{separable Hilbert space}. 
-In fact, $\spllR$ is the \emph{only} separable Hilbert space in the sense that all separable Hilbert spaces
-are isomorphically equivalent. 
-For example, $\spllR$ is isomorphic to $\spLLR$, the \structe{space of all absolutely square Lebesgue integrable functions}.
-%That is, their topological structure is the same.
-%Differences occur in the nature of operators on the spaces.
+%20190429%\ifdochasnot{seq}{
+%20190429%%--------------------------------------
+%20190429%\begin{definition}
+%20190429%\label{def:sequence}
+%20190429%\label{def:seq}
+%20190429%\footnote{
+%20190429%  \citerp{bromwich1908}{1},
+%20190429%  \citerpgc{thomson2008}{23}{143484367X}{Definition 2.1},
+%20190429%  \citerpg{joshi1997}{31}{8122408265}
+%20190429%  }
+%20190429%\label{def:tuple}
+%20190429%%--------------------------------------
+%20190429%Let $\clFyx$ be the set of all functions from a set $\setY$ to a set $\setX$.
+%20190429%Let $\Z$ be the set of integers.
+%20190429%\defbox{\begin{array}{l}
+%20190429%  \text{A function $\ff$ in $\clFyx$ is a \hid{sequence} over $\setX$ if $\setY=\Z$.}\\
+%20190429%  \text{A sequence may be denoted in the form $\ds\seqxZ{x_n}$ or simply as $\ds\seqn{x_n}$.}\\
+%20190429%  %\text{A function $\ff$ in $\clFyx$ is an \hid{n-tuple} over $\setX$ if $\setY=\setn{1,2,\ldots,\xN}$.}\\
+%20190429%  %\text{An n-tuple may be denoted in the form $\ds\tuplexn{x_n}$ or simply as $\ds\tuplen{x_n}$.}
+%20190429%\end{array}}
+%20190429%\end{definition}
+%20190429%  }
+%20190429%
+%20190429%%--------------------------------------
+%20190429%\begin{definition}
+%20190429%\footnote{
+%20190429%  \citerpgc{kubrusly2011}{347}{0817649972}{Example 5.K}
+%20190429%  }
+%20190429%\label{def:spllR}
+%20190429%\label{def:spllF}
+%20190429%%--------------------------------------
+%20190429%Let $\fieldF$ be a \structe{field} \xref{def:field}.
+%20190429%\defboxt{
+%20190429%  The \structd{space of all absolutely square summable sequences} $\spllF$ over $\F$ is defined as
+%20190429%  \\\indentx$\ds\spllF\eqd\set{\seqxZ{x_n}}{\sum_{n\in\Z}\abs{x_n}^2 < \infty}$
+%20190429%  }
+%20190429%\end{definition}
+%20190429%
+%20190429%The space $\spllR$ is an example of a \structe{separable Hilbert space}. 
+%20190429%In fact, $\spllR$ is the \emph{only} separable Hilbert space in the sense that all separable Hilbert spaces
+%20190429%are isomorphically equivalent. 
+%20190429%For example, $\spllR$ is isomorphic to $\spLLR$, the \structe{space of all absolutely square Lebesgue integrable functions}.
+%20190429%%That is, their topological structure is the same.
+%20190429%%Differences occur in the nature of operators on the spaces.
 
 %--------------------------------------
 \begin{definition}
@@ -92,40 +92,40 @@ For example, $\spllR$ is isomorphic to $\spLLR$, the \structe{space of all absol
 \end{array}}
 \end{definition}
 
-%--------------------------------------
-\begin{proposition}
-%--------------------------------------
-Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
-\propbox{
-  \seqn{x_n}\convd\seqn{y_n} = \seqn{y_n}\convd\seqn{x_n}
-  \qquad{\scy\forall\seqxZ{x_n},\seqxZ{y_n}\in\spllR}
-  \qquad\text{($\convd$ is \prope{commutative})}
-  }
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  [x\convd y](n)
-    &\eqd \sum_{m\in\Z} x_m y_{n-m}
-    &&    \text{by \prefp{def:dsp_conv}}
-  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
-    &&    \text{where $k=n-m \iff m=n-k$}
-  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
-    &&    \text{by change commutivity of addition}
-  \\&=    \sum_{m\in\Z} x_{n-m} y_m
-    &&    \text{by change of variables}
-  \\&=    \sum_{m\in\Z} y_m x_{n-m} 
-    &&    \text{by \prop{commutative} property of the field over $\C$}
-  \\&\eqd \brp{y\convd x}_n
-    &&    \text{by \prefp{def:dsp_conv}}
-\end{align*}
-\end{proof}
+%20190429%%--------------------------------------
+%20190429%\begin{proposition}
+%20190429%%--------------------------------------
+%20190429%Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
+%20190429%\propbox{
+%20190429%  \seqn{x_n}\convd\seqn{y_n} = \seqn{y_n}\convd\seqn{x_n}
+%20190429%  \qquad{\scy\forall\seqxZ{x_n},\seqxZ{y_n}\in\spllR}
+%20190429%  \qquad\text{($\convd$ is \prope{commutative})}
+%20190429%  }
+%20190429%\end{proposition}
+%20190429%\begin{proof}
+%20190429%\begin{align*}
+%20190429%  [x\convd y](n)
+%20190429%    &\eqd \sum_{m\in\Z} x_m y_{n-m}
+%20190429%    &&    \text{by \prefp{def:dsp_conv}}
+%20190429%  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
+%20190429%    &&    \text{where $k=n-m \iff m=n-k$}
+%20190429%  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
+%20190429%    &&    \text{by change commutivity of addition}
+%20190429%  \\&=    \sum_{m\in\Z} x_{n-m} y_m
+%20190429%    &&    \text{by change of variables}
+%20190429%  \\&=    \sum_{m\in\Z} y_m x_{n-m} 
+%20190429%    &&    \text{by \prop{commutative} property of the field over $\C$}
+%20190429%  \\&\eqd \brp{y\convd x}_n
+%20190429%    &&    \text{by \prefp{def:dsp_conv}}
+%20190429%\end{align*}
+%20190429%\end{proof}
 
 %--------------------------------------
 \begin{proposition}
 \label{prop:conv_knk}
 %--------------------------------------
 Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
-Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR}.
+Let $\spllR$ be the set of \prope{absolutely summable} sequences. % \xref{def:spllR}.
 \propbox{
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
       (A).&\fx(n) &\in& \spllR & and
@@ -145,7 +145,7 @@ Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR
     && \text{$\implies$ $k=-p$}
   \\&= \sum_{p\in\Z} \fx(-p)\fy(n-p) 
     && \text{by \prope{absolutely summable} hypothesis}
-    && \text{\xref{def:spllR}}
+   %&& \text{\xref{def:spllR}}
   \\&= \sum_{p\in\Z} \fx'(p)\fy(n-p) 
     && \text{where $\fx'(n) \eqd\fx(-n)$}
     && \text{$\implies$ $\fx(-n)=\fx'(n)$}
@@ -168,13 +168,10 @@ Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR
 \label{def:opZ}
 %--------------------------------------
 %Let $\seq{x_n}{n\in\Z}$ be a sequence in the space $\spllR$. %over a ring $\ring$. 
-\defbox{\begin{array}{M}
   The \opd{z-transform} $\opZ$ of $\seq{x_n}{n\in\Z}$ is defined as
   \\\indentx
-  $\ds\brs{\hxs{\opZ}\seqn{x_n}}(z) \eqd \mcom{\sum_{n\in\Z} x_n z^{-n}}{Laurent series}\qquad\scy\forall\seqn{x_n}\in\spllR$
-\end{array}}
+  $\ds\brs{\hxs{\opZ}\seqn{x_n}}(z) \eqd {\sum_{n\in\Z} x_n z^{-n}}\qquad\scy\forall\seqn{x_n}\in\spllR$
 \end{definition}
-
 
 %--------------------------------------
 \begin{theorem}
@@ -182,9 +179,9 @@ Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR
 %--------------------------------------
 Let $X(z)\eqd\opZ\fx(n)$ be the \ope{z-transform} of $\fx(n)$.
 \thmbox{
-  \brb{\begin{array}{rcl}
+  \mcom{\brb{\begin{array}{rcl}
     \Zx(z) &\eqd& \opZ\seqn{\fx(n)}
-  \end{array}}
+  \end{array}}}{\xref{def:opZ}}
   \quad\implies\quad
   \brb{\begin{array}{F>{\ds}lc>{\ds}lCD}
       (1).&\opZ\seqn{\alpha\fx(n)} &=& \alpha\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
@@ -241,10 +238,10 @@ Let $X(z)\eqd\opZ\fx(n)$ be the \ope{z-transform} of $\fx(n)$.
     && \text{$\implies$ $n=-m$}
   \\&= \sum_{m\in\Z}\fx[m] z^{m}
     && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+    %&& \text{\xref{def:spllR}}
   \\&= \sum_{m\in\Z}\fx[m] \brp{\frac{1}{z}}^{-m}
     && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+   %&& \text{\xref{def:spllR}}
   \\&\eqd \Zx\brp{\frac{1}{z}}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
@@ -258,13 +255,13 @@ Let $X(z)\eqd\opZ\fx(n)$ be the \ope{z-transform} of $\fx(n)$.
     && \text{$\implies$ $n=-m$}
   \\&= \sum_{m\in\Z}\fx^\ast[m] z^{m}
     && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+   %&& \text{\xref{def:spllR}}
   \\&= \sum_{m\in\Z}\fx^\ast[m] \brp{\frac{1}{z}}^{-m}
     && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+   %&& \text{\xref{def:spllR}}
   \\&= \brp{\sum_{m\in\Z}\fx[m] \brp{\frac{1}{z^\ast}}^{-m}}^\ast
     && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+   %&& \text{\xref{def:spllR}}
   \\&\eqd \Zx^\ast\brp{\frac{1}{z^\ast}}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
