--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -16,9 +16,9 @@ as well as the more general $\Szxy(z)$,
 which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
 \begin{definition}\label{def:Swxy}\label{def:Szxy}
 \defbox{
-  \Swxy(\omega) \eqd \opDTFT\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) e^{-i\omega m}
-  \qquad\qquad
   \Szxy(z)       \eqd \opZ\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) z^{-m}
+  \qquad\qquad
+  \Swxy(\omega) \eqd \opDTFT\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) e^{-i\omega m}
   }
 \end{definition}
 
@@ -31,8 +31,8 @@ Here is a very limited overview of the definitions of $\Rxy(m)$:
   \mc{5}{l}{References that put conjugate $\conj$ on $\rvy$:}
   \\&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &\eqd& E\brb{\rvx(m)\rvy^\ast(0)}
   \\&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &\eqd& E\brs{\rvx(m)\rvy^\ast(0)}
-  \\&\citeP{matlab_xcorr}                    & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
-  \\&\citeP{matlab_cpsd}                     & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
+  \\&\citeP{matlab_cpsd},\citeP{matlab_xcorr}& R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
+ %\\&                     & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
   \\
   \mc{5}{l}{References that put conjugate $\conj$ on $\rvx$:}
   \\&\citerpg{kay1988}{52}{8131733564}                    & r_{xy}[m] &\eqd& \mathcal{E}\brb{x^\ast[0]y[m]}
@@ -80,16 +80,14 @@ Here is a formalized list of the eight definitions.
 \begin{definition}
 \label{def:Rxym}
 %---------------------------------------
-\defbox{\begin{array}{FM   >{\ds}r  c     l *{4}{@{\hspace{0pt}}l}         }
-    (1).&\fnctd{Papoulis}:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)&\rvy^\ast&(0&)]
-  \\(2).&\fnctd{Kay}:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)&\rvy     &(m&)]
-  \\(3).&\fnctd{y-star-m}:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)&\rvy^\ast&(m&)]
-  \\(4).&\fnctd{x-star-m}:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)&\rvy     &(0&)]
-  \\(5).&\fnctd{Bendat}:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)&\rvy     &(m&)]
-  \\(6).&\fnctd{alt-Bendat}:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)&\rvy     &(0&)]
-  \\(7).&\fnctd{Bendat-star}:     & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)&\rvy^\ast&(m&)]
-  \\(8).&\fnctd{alt-Bendat-star}: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)&\rvy^\ast&(0&)]
-\end{array}}
+\mbox{}\\$\begin{array}{|*{2}{FM   >{\ds}r  c     l *{4}{@{\hspace{0pt}}l}  |}}
+  \hline
+    (1).&\fnctd{Papoulis}:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)&\rvy^\ast&(0&)]  &(5).&\fnctd{Bendat}:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)&\rvy     &(m&)]
+  \\(2).&\fnctd{Kay}:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)&\rvy     &(m&)]  &(6).&\fnctd{alt-Bendat}:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)&\rvy     &(0&)]
+  \\(3).&\fnctd{y-star-m}:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)&\rvy^\ast&(m&)]  &(7).&\fnctd{Bendat-star}:     & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)&\rvy^\ast&(m&)]
+  \\(4).&\fnctd{x-star-m}:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)&\rvy     &(0&)]  &(8).&\fnctd{alt-Bendat-star}: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)&\rvy^\ast&(0&)]
+  \\\hline
+\end{array}$
 \end{definition}
 
 %=======================================
@@ -108,7 +106,8 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 %\propbox{
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
 \\
-$\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0pt}}l         D    l         c  l       *{3}{@{\hspace{0pt}}l}                                 c  l       *{5}{@{\hspace{0pt}}l}}
+$\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0pt}}l         D    l         c  l       *{3}{@{\hspace{0pt}}l}                                 c  l       *{5}{@{\hspace{0pt}}l}|}
+  \hline
     (1) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy     &(z)                    &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx     &(z)
   \\(2) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
   \\(3) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx\brp{z}           &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
@@ -117,13 +116,14 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
   \\(6) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
   \\(7) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z)               &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
   \\(8) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\\hline
 \end{array}$
 %}
 \end{proposition}
 \begin{proof}
 \begin{align*}
-\intertext{(1). If we follow Papoulis $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy^\ast(0)}}$, then\ldots}
-    \Szyt(z)
+%\intertext{(1). If we follow Papoulis $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy^\ast(0)}}$, then\ldots}
+    (1).\quad\Szyt(z)
       &\eqd \opZ\Ryt(m)
       && \text{by definition of $\Szty(z)$}                                    && \text{\xref{def:Szxy}}
     \\&\eqd \opZ\pE\brs{\rvy(m)\rvt^\ast(0)}
@@ -131,18 +131,16 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
     \\&=    \opZ\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvt^\ast(0)}
       && \text{by \prope{LTI} property}                                        &&
     \\&=    \opZ        \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m-k)\rvt^\ast(0)}
-      && \text{by \prope{linearity} of $\opE$}                                 && \text{\xref{thm:pE_linop}}
+      && \text{by \prope{linearity} of $\opE$}                                %&& \text{\xref{thm:pE_linop}}
     \\&\eqd \opZ        \sum_{k\in\Z} \fh(k) \Rxt(m-k)
       && \text{by this definition of $\Rxy(m)$}                                &&
     \\&= \opZ\brs{\fh(m) \convd \Rxt(m)}
       && \text{by definition of \ope{convolution}}                             && \text{\xref{def:convd}}
     \\&= \brs{\opZ\fh(m)} \brs{\opZ\Rxt(m)}
       && \text{by \thme{convolution theorem}}                                  && \text{\xref{thm:conv}}
-    \\&= \ZH(z) \Szxt(z)
-      && \text{by property of the \ope{Z-transform}}                           && \text{by \xref{thm:opZ}}
-\end{align*}
-
-\begin{align*}
+    \\&\eqd \ZH(z) \Szxt(z)
+      && \text{by definitions of $\ZH$ and $\Szxt$}
+    \\
     \boxed{\Szxy(z)}
       &=\mcom{\Szyx^\ast\brp{\frac{1}{z^\ast}}}{by \prefpp{thm:ZSxy_sym}}
      &&\eqd \brlr{\Szyt^\ast\brp{\frac{1}{z^\ast}}}_{\rvt\eqd\rvx}
@@ -329,7 +327,8 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
 %---------------------------------------
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
 \\
-$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
+$\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}|}
+  \hline
     (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &( \omega) &=& |\FH&( \omega)|^2 &\Swxx(\omega)
   \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&( \omega) &=& |\FH&( \omega)|^2 &\Swxx(\omega)
   \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx(\omega)
@@ -338,6 +337,7 @@ $\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D
   \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx(\omega)
   \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx(\omega)
   \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx(\omega)
+  \\\hline
 \end{array}$
 \end{proposition}
 \begin{proof}
@@ -384,7 +384,8 @@ The other seven $\Swxy/\Swyy$ proofs follow in like manner.
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
 \\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
 \\
-$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
+$\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}|}
+  \hline
     (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
   \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
   \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
@@ -393,6 +394,7 @@ $\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D
   \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
   \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
   \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\\hline
 \end{array}$
 \end{proposition}
 \begin{proof}
