--- a/common/backmata.tex
+++ b/common/backmata.tex
@@ -8,35 +8,35 @@
 \addcontentsline{toc}{section}{References}
 %\bibliography{../common/bib/found,../common/bib/order,../common/bib/analysis,../common/bib/algebra,../common/bib/biology,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/english}
 \bibliography{../common/bib/analysis,../common/bib/language,../common/bib/algebra,../common/bib/biology,../common/bib/found,../common/bib/order,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/probstat,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/english}
-%---------------------------------------
-\section*{Reference Index}
-%---------------------------------------
-\markboth{Reference Index}{Reference Index}
-\addcontentsline{toc}{section}{Reference Index}
-\begin{multicols}{3}
-\input{xref.ind}
-\end{multicols}
-%---------------------------------------
-\section*{Subject Index}
-%---------------------------------------
-\markboth{Subject Index}{Subject Index}
-\addcontentsline{toc}{section}{Subject Index}
-\begin{multicols}{3}
-  \input{xsym.ind}
-\end{multicols}
-%---------------------------------------
-\subsection*{License}
-%---------------------------------------
-\markboth{License}{License}
-\addcontentsline{toc}{section}{License}
-This document is provided under the terms of 
-the \href{https://creativecommons.org/}{Creative Commons} license \href{https://creativecommons.org/licenses/by/4.0/legalcode}{CC-BY 4.0}.
-\\For an exact statement of the license, see 
-\\\indentx\url{https://creativecommons.org/licenses/by/4.0/legalcode}
-\\
-The icon 
-\tbox{\href{https://creativecommons.org/licenses/by/4.0/legalcode}{\ccby}}
-appearing throughout this document is based on one that was once at 
-\\\indentx\url{https://creativecommons.org/}\\
-where it was stated, 
-``Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 4.0 International license."
+%%---------------------------------------
+%\section*{Reference Index}
+%%---------------------------------------
+%\markboth{Reference Index}{Reference Index}
+%\addcontentsline{toc}{section}{Reference Index}
+%\begin{multicols}{3}
+%\input{xref.ind}
+%\end{multicols}
+%%---------------------------------------
+%\section*{Subject Index}
+%%---------------------------------------
+%\markboth{Subject Index}{Subject Index}
+%\addcontentsline{toc}{section}{Subject Index}
+%\begin{multicols}{3}
+%  \input{xsym.ind}
+%\end{multicols}
+%%---------------------------------------
+%\subsection*{License}
+%%---------------------------------------
+%\markboth{License}{License}
+%\addcontentsline{toc}{section}{License}
+%This document is provided under the terms of 
+%the \href{https://creativecommons.org/}{Creative Commons} license \href{https://creativecommons.org/licenses/by/4.0/legalcode}{CC-BY 4.0}.
+%\\For an exact statement of the license, see 
+%\\\indentx\url{https://creativecommons.org/licenses/by/4.0/legalcode}
+%\\
+%The icon 
+%\tbox{\href{https://creativecommons.org/licenses/by/4.0/legalcode}{\ccby}}
+%appearing throughout this document is based on one that was once at 
+%\\\indentx\url{https://creativecommons.org/}\\
+%where it was stated, 
+%``Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 4.0 International license."
