2019xcor. Rxy relations

--- a/2019xcor/randseq.tex
+++ b/2019xcor/randseq.tex
@@ -61,52 +61,65 @@
 %---------------------------------------
 \subsection{Properties}
 %---------------------------------------
-%---------------------------------------
-\begin{theorem}
-\label{thm:Rxxnm}
-\label{thm:Ryynm}
-\label{thm:Rxynm}
-%---------------------------------------
-\thmbox{\begin{array}{rcl}
-   \Rxx(n,m) &=& \Rxx^\ast(n+m,-m)\\
-   \Rxy(n,m) &=& \Ryx^\ast(n+m,-m)
-\end{array}}
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  \Rxy(n,m)
-     &\eqd \pE\brs{\rvx(n+m) \rvy^\ast(n)}
-     && \text{by definition of $\Rxy(n,m)$}
-     && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvy^\ast(n) \rvx(n+m)}
-     && \text{by \prope{commutative} property of $\fieldC$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&= \brp{\pE\brs{\rvy(n) \rvx^\ast(n+m)}}^\ast
-     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-     && \text{\xref{def:staralg}}
-   \\&= \brp{\pE\brs{\rvy(n+m-m) \rvx^\ast(n+m)}}^\ast
-     && \text{by \prope{additive identity} property of $\fieldR$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&\eqd \Ryx^\ast(n+m,-m)
-     && \text{by definition of $\Rxy(n,m)$}
-     && \text{\xref{def:Rxynm}}
-   \\
-   \\
-   \Rxx(n,m)
-     &= \brlr{\Rxy(n,m)}_{\rvy=\rvx}
-     && \text{by $\rvy=\rvx$ constraint}
-   \\&= \brlr{\Rxy^\ast(n+m,-m)}_{\rvy=\rvx}
-     && \text{by previous result}
-   \\&= \Rxx^\ast(n+m,-m)
-     && \text{by $\rvy=\rvx$ constraint}
-\end{align*}
-\end{proof}
+%20190430%%---------------------------------------
+%20190430%\begin{theorem}
+%20190430%\label{thm:Rxxnm}
+%20190430%\label{thm:Ryynm}
+%20190430%\label{thm:Rxynm}
+%20190430%%---------------------------------------
+%20190430%\thmbox{\begin{array}{rcl}
+%20190430%   \Rxx(n,m) &=& \Rxx^\ast(n+m,-m)\\
+%20190430%   \Rxy(n,m) &=& \Ryx^\ast(n+m,-m)
+%20190430%\end{array}}
+%20190430%\end{theorem}
+%20190430%\begin{proof}
+%20190430%\begin{align*}
+%20190430%  \Rxy(n,m)
+%20190430%     &\eqd \pE\brs{\rvx(n+m) \rvy^\ast(n)}
+%20190430%     && \text{by definition of $\Rxy(n,m)$}
+%20190430%     && \text{\xref{def:Rxynm}}
+%20190430%   \\&= \pE\brs{\rvy^\ast(n) \rvx(n+m)}
+%20190430%     && \text{by \prope{commutative} property of $\fieldC$}
+%20190430%     && \text{\ifxref{algebra}{def:field}}
+%20190430%   \\&= \brp{\pE\brs{\rvy(n) \rvx^\ast(n+m)}}^\ast
+%20190430%     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+%20190430%     && \text{\xref{def:staralg}}
+%20190430%   \\&= \brp{\pE\brs{\rvy(n+m-m) \rvx^\ast(n+m)}}^\ast
+%20190430%     && \text{by \prope{additive identity} property of $\fieldR$}
+%20190430%     && \text{\ifxref{algebra}{def:field}}
+%20190430%   \\&\eqd \Ryx^\ast(n+m,-m)
+%20190430%     && \text{by definition of $\Rxy(n,m)$}
+%20190430%     && \text{\xref{def:Rxynm}}
+%20190430%   \\
+%20190430%   \\
+%20190430%   \Rxx(n,m)
+%20190430%     &= \brlr{\Rxy(n,m)}_{\rvy=\rvx}
+%20190430%     && \text{by $\rvy=\rvx$ constraint}
+%20190430%   \\&= \brlr{\Rxy^\ast(n+m,-m)}_{\rvy=\rvx}
+%20190430%     && \text{by previous result}
+%20190430%   \\&= \Rxx^\ast(n+m,-m)
+%20190430%     && \text{by $\rvy=\rvx$ constraint}
+%20190430%\end{align*}
+%20190430%\end{proof}
 
 %%---------------------------------------
 %\subsection{Wide Sense Stationary processes}
 %\index{wide sense stationary}
 %\index{WSS}
 %%---------------------------------------
+%%---------------------------------------
+%\begin{definition}
+%\label{def:wss}
+%%---------------------------------------
+%\defboxt{
+%  A random process $\rvx(n)$ is \propd{wide sense stationary} (\propd{WSS}) if
+%  \\\indentx$\begin{array}{FlMMD}
+%   (1).& \pmeanx(t)     & is \prope{constant} with respect to $t$ & (\prope{stationary in the mean})    & and \\
+%   (2).& \Rxx(t+\tau,t) & is \prope{constant} with respect to $t$ & (\prope{stationary in correlation})
+%  \end{array}$
+%  }
+%\end{definition}
+
 %%---------------------------------------
 %\begin{definition}
 %%---------------------------------------
