--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -95,10 +95,100 @@ Here is a formalized list of the eight definitions.
 %=======================================
 Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 \\\indentx$\begin{array}{FMM}
-  \imark & We get four different results for $\Szxy(z)$ & \xref{prop:RxySzxy}\\
-  \imark & We get four different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy}\\
-  \imark & If $\rvx$ and $\rvy$ are \prope{real-valued}, we get two different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy_real}
+    \imark & We get 3 different relations between $\Ryx(m)$ and $\Rxy(m)$                                   & \xref{prop:Rxy}
+  \\\imark & We get 2 different relations between $\Rxx(-m)$ and $\Rxx(m)$                                  & \xref{prop:Rxy}
+  \\\imark & We get 4 different results for $\Szxy(z)$                                                      & \xref{prop:RxySzxy}
+  \\\imark & We get 4 different results for $\Swxy(\omega)$                                                 & \xref{prop:RxySwxy}
+  \\\imark & If $\rvx$ and $\rvy$ are \prope{real-valued}, we get two different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy_real}
 \end{array}$
+
+
+%---------------------------------------
+\begin{proposition}
+\label{prop:Rxy}
+%---------------------------------------
+%\propbox{
+Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
+\\
+$\begin{array}{|Fc        l       c l@{\hspace{0pt}}c@{\hspace{0pt}}r D l    c l@{\hspace{0pt}}c@{\hspace{0pt}}r D|}
+  \hline
+    (1) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
+  \\(2) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
+  \\(3) &      \implies& \Ryx(m) &=&\Rxy^\ast&(&-m) &and&  \Rxx(-m) &=&\Rxx^\ast&(& m) & (\prope{conjugate symmetric})
+  \\(4) &      \implies& \Ryx(m) &=&\Rxy^\ast&(& m) &and&  \Rxx(-m) &=&\Rxx^\ast&(&-m) & (\prope{conjugate symmetric})
+  \\(5) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
+  \\(6) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
+  \\(7) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
+  \\(8) &      \implies& \Ryx(m) &=&\Rxy     &(&-m) &and&  \Rxx(-m) &=&\Rxx     &(& m) & (\prope{symmetric})
+  \\\hline
+\end{array}$
+%}
+\end{proposition}
+\begin{proof}
+\begin{align*}
+    (1).\quad\Ryx(m)
+      &\eqd \pE\brs{\rvy(m)\rvx^\ast(0)}
+      && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
+    \\&= \brp{\pE\brs{\rvx(0)\rvy^\ast(m)}}^\ast
+      && \text{by \prope{antiautomorphic} property of *-algebras}              && \text{\xref{def:staralg}}
+    \\&= \brp{\pE\brs{\rvx(0-m)\rvx^\ast(m-m)}}^\ast
+      && \text{by \prope{wide sense stationary} property}
+    \\&\eqd \Rxy^\ast(-m)
+      && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
+    \\
+    (1).\quad\Rxy(-m)
+      &\eqd \pE\brs{\rvx(-m)\rvy^\ast(0)}
+      && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
+    \\&=     \pE\brs{\rvx(-m+m)\rvy^\ast(0+m)}
+      && \text{by \prope{wide sense stationary} property}
+\end{align*}
+
+\begin{align*}
+    (2).\quad\Ryx(m)
+      &\eqd \pE\brs{\rvy^\ast(0)\rvx(m)}
+     &&=\brp{\pE\brs{\rvx^\ast(m)\rvy(0)}}^\ast
+     &&=\brp{\pE\brs{\rvx^\ast(m-m)\rvy(0-m)}}^\ast
+     &&\eqd \Rxy^\ast(-m)
+    \\
+    (3).\quad\Ryx(m)
+      &\eqd \pE\brs{\rvy(0)\rvx^\ast(m)}
+     &&=\brp{\pE\brs{\rvx(m)\rvy^\ast(0)}}^\ast
+     &&=\brp{\pE\brs{\rvx(m-m)\rvy^\ast(0-m)}}^\ast
+     &&\eqd \Rxy^\ast(-m)
+    \\
+    (4).\quad\Ryx(m)
+      &\eqd \pE\brs{\rvy^\ast(m)\rvx(0)}
+     &&=\brp{\pE\brs{\rvx^\ast(0)\rvy(m)}}^\ast
+     &&=\brp{\pE\brs{\rvx^\ast(m)\rvy(0)}}^\ast
+     &&\eqd \Rxy^\ast(m)
+    \\
+    (5).\quad\Ryx(m)
+      &\eqd  \pE\brs{\rvy(0)\rvx(m)}
+     &&=     \pE\brs{\rvx(m)\rvy(0)}
+     &&=     \pE\brs{\rvx(m-m)\rvy(0-m)}
+     &&\eqd \Rxy(-m)
+    \\
+    (6).\quad\Ryx(m)
+      &\eqd  \pE\brs{\rvy(m)\rvx(0)}
+     &&=     \pE\brs{\rvx(0)\rvy(m)}
+     &&=     \pE\brs{\rvx(0-m)\rvy(m-m)}
+     &&\eqd \Rxy(-m)
+    \\
+    (7).\quad\Ryx(m)
+      &\eqd  \pE\brs{\rvy^\ast(0)\rvx^\ast(m)}
+     &&=     \pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
+     &&=     \pE\brs{\rvx^\ast(m-m)\rvy^\ast(0-m)}
+     &&\eqd \Rxy(-m)
+    \\
+    (8).\quad\Ryx(m)
+      &\eqd  \pE\brs{\rvy^\ast(m)\rvx^\ast(0)}
+     &&=     \pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
+     &&=     \pE\brs{\rvx^\ast(0-m)\rvy^\ast(m-m)}
+     &&\eqd \Rxy(-m)
+\end{align*}
+
+\end{proof}
+
 %---------------------------------------
 \begin{proposition}
 \label{prop:RxySzxy}
